--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
